--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
         <li class="navbar__menu__item">Contact</li>
       </ul>
     </nav>
+    <!-- Home -->
+    <section id="home">
+      <img
+        src="imgs/profile.jpg"
+        alt="JeongBin's profile photo"
+        class="home__avartar"
+      />
+      <h1 class="home__title">Hello,<br />I'm JeongBin</h1>
+      <h2 class="home__description">Designable front-end developers</h2>
+      <button class="home__contact">Contact me</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
