--- a/index.html
+++ b/index.html
@@ -52,11 +52,70 @@
         class="home__avartar"
       />
       <h1 class="home__title">Hello,<br />I'm JeongBin</h1>
-      <h2 class="home__description">Designable front-end developers</h2>
+      <h2 class="home__description">
+        Front-end developers with beautiful designs and coding
+      </h2>
       <button class="home__contact">Contact me</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+      <h1>About me</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet harum
+        distinctio mollitia expedita quaerat, esse aperiam neque molestiae
+        cupiditate corporis nobis adipisci. Molestias minus enim officia, sit
+        commodi laborum error!
+      </p>
+      <div class="about__majors">
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-html5"></i>
+          </div>
+          <div class="major__title">Html / CSS / JavaScript</div>
+          <div class="major__description">
+            HTML5, Quick Markup, <br />Semantic Tag, Accessibility
+          </div>
+        </div>
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-react"></i>
+          </div>
+          <div class="major__title">React</div>
+          <div class="major__description">
+            Lorem ipsum, ullam iure quod, <br />temporibus et, adipisci sunt!
+          </div>
+        </div>
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-node-js"></i>
+          </div>
+          <div class="major__title">Node.js</div>
+          <div class="major__description">
+            Lorem ipsum, ullam iure quod, <br />temporibus et, adipisci sunt!
+          </div>
+        </div>
+      </div>
+      <div class="about__learns">
+        <div class="learn">
+          <img
+            src="imgs/learns/dreamcoding_logo.png"
+            alt="Dream Coding"
+            class="learn__logo"
+          />
+          <p class="learn__name">Dream Coding</p>
+          <p class="learn__period">2021 July Until now</p>
+        </div>
+        <div class="learn">
+          <img
+            src="imgs/learns/dreamcoding_logo.png"
+            alt="Dream Coding"
+            class="learn__logo"
+          />
+          <p class="learn__name">Dream Coding</p>
+          <p class="learn__period">2021 July Until now</p>
+        </div>
+      </div>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
