--- a/index.html
+++ b/index.html
@@ -208,7 +208,114 @@
       </div>
     </section>
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+      <h1>My work</h1>
+      <h3>Projects</h3>
+      <div class="work__categories">
+        <button class="category__btn">
+          All<span class="category__count">8</span>
+        </button>
+        <button class="category__btn">
+          Web page<span class="category__count">3</span>
+        </button>
+        <button class="category__btn">
+          React<span class="category__count">3</span>
+        </button>
+        <button class="category__btn">
+          Mobile<span class="category__count">2</span>
+        </button>
+      </div>
+      <div class="work__projects">
+        <a href="#" class="project" target="blank">
+          <img
+            class="project__img"
+            src="imgs/projects/macbook1.png"
+            alt="project1"
+          />
+          <div class="project__description">
+            <h3>Youtube Site</h3>
+            <span>Clone coding with HTML and CSS</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img
+            class="project__img"
+            src="imgs/projects/macbook2.png"
+            alt="project2"
+          />
+          <div class="project__description">
+            <h3>Project 2</h3>
+            <span>New Project..</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img
+            class="project__img"
+            src="imgs/projects/macbook3.png"
+            alt="project3"
+          />
+          <div class="project__description">
+            <h3>Project 3</h3>
+            <span>New Project..</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img
+            class="project__img"
+            src="imgs/projects/iphone1.png"
+            alt="project4"
+          />
+          <div class="project__description">
+            <h3>Project 4</h3>
+            <span>New Project..</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img
+            class="project__img"
+            src="imgs/projects/iphone2.png"
+            alt="project5"
+          />
+          <div class="project__description">
+            <h3>Project 5</h3>
+            <span>New Project..</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img
+            class="project__img"
+            src="imgs/projects/iphone3.png"
+            alt="project6"
+          />
+          <div class="project__description">
+            <h3>Project 6</h3>
+            <span>New Project..</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img
+            class="project__img"
+            src="imgs/projects/iphone4.png"
+            alt="project7"
+          />
+          <div class="project__description">
+            <h3>Project 7</h3>
+            <span>New Project..</span>
+          </div>
+        </a>
+        <a href="#" class="project" target="blank">
+          <img
+            class="project__img"
+            src="imgs/projects/iphone5.png"
+            alt="project8"
+          />
+          <div class="project__description">
+            <h3>Project 8</h3>
+            <span>New Project..</span>
+          </div>
+        </a>
+      </div>
+    </section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
