--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <a href="#" class="project" target="blank">
           <img
             class="project__img"
-            src="imgs/projects/macbook1.png"
+            src="imgs/projects/project1.png"
             alt="project1"
           />
           <div class="project__description">
@@ -240,7 +240,7 @@
         <a href="#" class="project" target="blank">
           <img
             class="project__img"
-            src="imgs/projects/macbook2.png"
+            src="imgs/projects/project2.png"
             alt="project2"
           />
           <div class="project__description">
@@ -251,7 +251,7 @@
         <a href="#" class="project" target="blank">
           <img
             class="project__img"
-            src="imgs/projects/macbook3.png"
+            src="imgs/projects/project3.png"
             alt="project3"
           />
           <div class="project__description">
@@ -262,7 +262,7 @@
         <a href="#" class="project" target="blank">
           <img
             class="project__img"
-            src="imgs/projects/iphone1.png"
+            src="imgs/projects/project4.png"
             alt="project4"
           />
           <div class="project__description">
@@ -273,7 +273,7 @@
         <a href="#" class="project" target="blank">
           <img
             class="project__img"
-            src="imgs/projects/iphone2.png"
+            src="imgs/projects/project5.png"
             alt="project5"
           />
           <div class="project__description">
@@ -284,7 +284,7 @@
         <a href="#" class="project" target="blank">
           <img
             class="project__img"
-            src="imgs/projects/iphone3.png"
+            src="imgs/projects/project6.png"
             alt="project6"
           />
           <div class="project__description">
@@ -295,7 +295,7 @@
         <a href="#" class="project" target="blank">
           <img
             class="project__img"
-            src="imgs/projects/iphone4.png"
+            src="imgs/projects/project7.png"
             alt="project7"
           />
           <div class="project__description">
@@ -306,7 +306,7 @@
         <a href="#" class="project" target="blank">
           <img
             class="project__img"
-            src="imgs/projects/iphone5.png"
+            src="imgs/projects/project8.png"
             alt="project8"
           />
           <div class="project__description">
@@ -317,7 +317,44 @@
       </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+      <h1>Testimonials</h1>
+      <h3>See what they say about me</h3>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img
+            src="imgs/testimonial/people1.jpg"
+            alt="People"
+            class="testimonial__avartar"
+          />
+          <div class="testimonal__speech-bubble">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure,
+              impedit non. Numquam, fugiat odio laborum commodi tempore
+              repellat? Saepe et temporibus iste quos eveniet odio quae, enim
+              aliquam ipsam dicta?
+            </p>
+            <p class="name"><a href="#">JeongBin</a> / SW University</p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <img
+            src="imgs/testimonial/people1.jpg"
+            alt="People"
+            class="testimonial__avartar"
+          />
+          <div class="testimonal__speech-bubble">
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure,
+              impedit non. Numquam, fugiat odio laborum commodi tempore
+              repellat? Saepe et temporibus iste quos eveniet odio quae, enim
+              aliquam ipsam dicta?
+            </p>
+            <p class="name"><a href="#">JeongBin</a> / SW University</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
   </body>
