--- a/index.html
+++ b/index.html
@@ -356,6 +356,18 @@
       </div>
     </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+      <h1 class="contact__title">Let's talk</h1>
+      <h2 class="contact__email">yon824@naver.com</h2>
+      <div class="contact__links">
+        <a href="#" target="blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="#" target="blank">
+          <i class="fa fa-linkedin-square"></i>
+        </a>
+      </div>
+      <p class="contact__rights">2021 JeongBin - All right reserverd</p>
+    </section>
   </body>
 </html>
