--- a/index.html
+++ b/index.html
@@ -30,18 +30,14 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <p>Heading</p>
     <!-- Navbar -->
     <nav id="navbar">
       <div class="navbar__logo">
-        <img src="imgs/favicon.png" alt="logo" />
+        <i class="fas fa-star-and-crescent"></i>
         <a href="#">JeongBin</a>
       </div>
-      <ul class="navbarr__menu">
-        <li class="navbar__menu__item">Home</li>
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item active">Home</li>
         <li class="navbar__menu__item">About</li>
         <li class="navbar__menu__item">Skills</li>
         <li class="navbar__menu__item">Work</li>
