--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <button class="home__contact">Contact me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
       <h1>About me</h1>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet harum
@@ -72,7 +72,7 @@
           <div class="major__icon">
             <i class="fab fa-html5"></i>
           </div>
-          <div class="major__title">Html / CSS / JavaScript</div>
+          <h2 class="major__title">Html / CSS / JavaScript</h2>
           <div class="major__description">
             HTML5, Quick Markup, <br />Semantic Tag, Accessibility
           </div>
@@ -81,7 +81,7 @@
           <div class="major__icon">
             <i class="fab fa-react"></i>
           </div>
-          <div class="major__title">React</div>
+          <h2 class="major__title">React</h2>
           <div class="major__description">
             Lorem ipsum, ullam iure quod, <br />temporibus et, adipisci sunt!
           </div>
@@ -90,7 +90,7 @@
           <div class="major__icon">
             <i class="fab fa-node-js"></i>
           </div>
-          <div class="major__title">Node.js</div>
+          <h2 class="major__title">Node.js</h2>
           <div class="major__description">
             Lorem ipsum, ullam iure quod, <br />temporibus et, adipisci sunt!
           </div>
@@ -103,8 +103,10 @@
             alt="Dream Coding"
             class="learn__logo"
           />
-          <p class="learn__name">Dream Coding</p>
-          <p class="learn__period">2021 July Until now</p>
+          <div class="learn__description">
+            <p class="learn__name">Dream Coding</p>
+            <p class="learn__period">2021 July Until now</p>
+          </div>
         </div>
         <div class="learn">
           <img
@@ -112,13 +114,15 @@
             alt="Dream Coding"
             class="learn__logo"
           />
-          <p class="learn__name">Dream Coding</p>
-          <p class="learn__period">2021 July Until now</p>
+          <div class="learn__description">
+            <p class="learn__name">Dream Coding</p>
+            <p class="learn__period">2021 July Until now</p>
+          </div>
         </div>
       </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
       <h1>Skills</h1>
       <h2>Skills & Attributes</h2>
       <p>
@@ -209,7 +213,7 @@
       </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
@@ -318,7 +322,7 @@
       </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials">
+    <section id="testimonials" class="section">
       <h1>Testimonials</h1>
       <h3>See what they say about me</h3>
       <div class="testimonials">
@@ -357,7 +361,7 @@
       </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
       <h1 class="contact__title">Let's talk</h1>
       <h2 class="contact__email">yon824@naver.com</h2>
       <div class="contact__links">
