--- a/index.html
+++ b/index.html
@@ -219,17 +219,17 @@
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn">
-          All<span class="category__count">8</span>
+        <button class="category__btn active">
+          All <span class="category__count">8</span>
         </button>
         <button class="category__btn">
-          Web page<span class="category__count">3</span>
+          Web page <span class="category__count">3</span>
         </button>
         <button class="category__btn">
-          React<span class="category__count">3</span>
+          React <span class="category__count">3</span>
         </button>
         <button class="category__btn">
-          Mobile<span class="category__count">2</span>
+          Mobile <span class="category__count">2</span>
         </button>
       </div>
       <div class="work__projects">
