--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
     </section>
     <!-- Work -->
     <section id="work" class="section">
-      <h1>My work</h1>
+      <div class="section__container">
+        <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
         <button class="category__btn active">
@@ -322,10 +323,12 @@
           </div>
         </a>
       </div>
+      </div>
     </section>
     <!-- Testimonials -->
     <section id="testimonials" class="section">
-      <h1>Testimonials</h1>
+      <div class="section__container">
+        <h1>Testimonials</h1>
       <h3>See what they say about me</h3>
       <div class="testimonials">
         <div class="testimonial">
@@ -360,6 +363,7 @@
             class="testimonial__avartar"
           />
         </div>
+      </div>
       </div>
     </section>
     <!-- Contact -->
