--- a/index.html
+++ b/index.html
@@ -50,19 +50,20 @@
         <i class="fas fa-bars"></i>
       </button>
     </nav>
-    
     <!-- Home -->
     <section id="home">
-      <img
-        src="imgs/profile.jpg"
-        alt="JeongBin's profile photo"
-        class="home__avartar"
-      />
-      <h1 class="home__title">Hello,<br />I'm JeongBin</h1>
-      <h2 class="home__description">
-        Front-end developers with beautiful designs and coding
-      </h2>
-      <button class="home__contact">Contact me</button>
+      <div class="home__container">
+        <img
+          src="imgs/profile.jpg"
+          alt="JeongBin's profile photo"
+          class="home__avartar"
+        />
+        <h1 class="home__title">Hello,<br />I'm JeongBin</h1>
+        <h2 class="home__description">
+          Front-end developers with beautiful designs and coding
+        </h2>
+        <button class="home__contact">Contact me</button>
+      </div>
     </section>
     <!-- About -->
     <section id="about" class="section section__container">
